[Feature] cache added
