# microservices/catalog-service/src/main/java/hu/cubix/catalogservice/patrik/model/HistoryData.java
@@ -1,0 +1,19 @@
+package hu.cubix.catalogservice.patrik.model;
+
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+import org.hibernate.envers.RevisionType;
+
+import java.util.Date;
+
+@Data
+@AllArgsConstructor
+@NoArgsConstructor
+public class HistoryData<T> {
+
+    private T data;
+    private RevisionType revType;
+    private int revision;
+    private Date date;
+}
